Increased img's in bottom right box to fit each card height and then added gap to ensure text below did not get pushed into card below - KS

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,8 @@ body {
 }
 
 /* my updates*/
+
+
 .card {
     width:380px;
     height: 245px;
@@ -153,10 +155,11 @@ body {
     padding: unset;
 
 }
+
 .card-img-top {
     width: 100%;
     /*height: 100%;*/
-    max-height: 235px;
+    max-height: 245px;
     object-fit: cover;
 }
 .card-text {
@@ -211,6 +214,8 @@ p {
     /*flex-wrap: wrap;*/
     /*width:100%;*/
 }
+
+
 
 /*My updates*/
 /*Updated logo and background images and updated css */
